Fixed the top and bottom layout of the container

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* ----- HTML STYLE ----- */
 html {
     font-size: 1em;
-	line-height: 1.1em;
+	line-height: 1.31em;
 	/*height: 100%;
 	width: 100%;*/
 }
@@ -9,25 +9,20 @@ html {
 /* ---- BODY STYLE ----- */
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-	font-size: 1.35em;
+	font-size: 1em;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/*flex-flow: wrap;*/
+	/*flex-flow: row wrap;*/
 }
 
 .container {
 	max-width: 1200px; 
-	width: 100%;
+	margin: 0 auto;
 	display: flex;
 	justify-content: center;
-	align-items: stretch;
+	align-items: center;
 	flex-flow: row wrap; 
-	/*flex-grow: 4;
-	flex-basis: auto;*/
-
-	line-height: 1.4em;
-    font-size: 1em;
 }
 
 h1,
@@ -35,64 +30,66 @@ h2,
 h3 {
 	color: black;
 	text-transform: uppercase;
-	font-weight: 700;
+	font-weight: 43.75em;
 }
 h1 {
-	font-size: 2.5em;
-}
-h2 {
 	font-size: 1.9em;
 }
+h2 {
+	font-size: 1.13em;
+}
 h3 {
-	font-size: 1.6em;
+	font-size: 0.75em;
 }
 
 p {
-	font-size: 1.2em;
-	line-height: 1.4em; 
-    padding: 0 30px;
+	font-size: 0.88em;
+	line-height: 1.31em; 
+    padding: 0 1.88;
 }
 
 /* ---- The widths are in a percentage! ---- */
 header {
-	border-bottom: 3px solid #77a466;
-	margin: 0;
+	/*height: auto;*/
+	border-bottom: 0.19 solid #77a466;
+	margin: 0 auto;
 	display: flex;
-	justify-content: flex-start;
+	justify-content: center;
 	align-items: center;
 	flex-flow: row wrap; 
 }
 
 header h1 {
 	margin: 0;
-	padding: 0;
-	/*
-	align-items: left;*/
+	padding: 2.28em 2.88em 2.28em 0;
+	display: flex;
+	
+	align-items: left;
 }
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-	padding: 46px 0;
+	padding: 2.88em 0;
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
 	flex-flow: row wrap; 
 }
 header nav ul {
-	margin: 0 auto;
+	margin: 0;
 	padding: 0;
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
-	/*flex-flow: row wrap;*/ 
+	flex-flow: row wrap; 
 }
 header nav ul li {
 	text-transform: uppercase;
-	font-weight: 700;
-	font-size: .5em;
-	padding: 0 10px;
+	font-weight: 43.75em;
+	font-size: .88em;
+	padding: 0 0.63em;
 	/*display: inline;*/
 	display: flex;
 	flex-flow: row wrap;
@@ -100,6 +97,7 @@ header nav ul li {
 header nav ul li a{
 	text-decoration: none;
 	color:#77a466;
+	
 }
 
 /*The widths are in a percentage!*/
@@ -107,32 +105,35 @@ header nav ul li a{
 .bottom-section {
 	margin: 0 auto;
 	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-flow: wrap; 
+	justify-content: space-between;
+	align-items: flex-start;
+	flex-flow: row wrap; 
 }
 
 .main-image {
 	height: auto;
+
 }
 .main-image img {
 	width: 100%;
-	border-bottom: 3px solid #77a466;
+	border-bottom: 0.19em solid #77a466;
+
 }
 
 .main-title {
 	height: auto;
+	
 }
 .main-title h2 {
-	font-size: 1.7em;
+	/*font-size: 1.7em;*/
 	text-align: left;
-	padding: 5px 0;
+	padding: 0.31em 0;
 	color: #77a466;
 }
 .main-title p {
 	padding: 0;
-	font-size: 1.3em;
-	line-height: 1.1em;
+	font-size: 1em;
+	line-height: 1.56em;
 }
 
 .section-one,
@@ -140,21 +141,21 @@ header nav ul li a{
 .section-three {
 	width: 33%;
 	height: auto;
-	border-top: 1px solid #eee;
+	border-top: 0.06em solid #eee;
 }
 
 .section-one h3 {
-	padding: 10px 0;
+	padding: 0.63em 0;
 }
 
 .section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
+	border-left: 0.06em solid #eee;
+	border-right: 0.06em solid #eee;
 }
 
 .section-two h3,
 .section-three h3 {
-	padding: 10px 30px;
+	padding: 0.63em 1.88em;
 }
 
 .menu {
@@ -162,54 +163,63 @@ header nav ul li a{
 	padding: 0;
 }
 .menu li {
-	padding: 10px 0;
+	padding: 0.63em 0;
 	color:#77a466;
 }
 
 .reviews {
 	color: #333;
-	font-size: 1.em;
-	line-height: 1.4em;
+	font-size: 1em;
+	line-height: 1.31em;
 }
 
 .address {
-	font-size: 1.em;
-	line-height: 1.4em;
+	font-size: 1em;
+	line-height: 1.50em;
 }
 
 /*The widths are in a percentage!*/
 /* ----- FOOTER STYPE ----- */
 
 footer {
-	border-top: 3px solid #eee;
+	/*height: auto;*/
+	border-top: 0.19em solid #eee;
 	margin: 0 auto;
 	text-align: center;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-flow: wrap; 
+	/*flex-flow: wrap;*/ 
 }
 footer span {
 	font-family: 'Galada', cursive;
 	text-transform: lowercase;
 	color: #77a466;
-	font-size: 1em;
+	font-size: 0.88em;
 }
 
 /* ----- MEDIA QUERIES FOR RESPONSIVE MOBILE FIRST ----- */
 @media all and (min-width: 1200px) {
 	.section-one, .section-two, .section-three {
-		/* set your flex value to 1 50% */
 		flex-basis: 1 33%;
-		/*flex-flow: column wrap; */
-		
 	}
 } 
 /*
 @media (min-width: 1200px) {
 	.section-one, .section-two, .section-three {
-		/* set your flex value to 1 50% */
-		/*flex-basis: 1 33%; 
+		
+		flex-basis: 1 33%; 
+		flex-flow: column wrap;
+	}
+} */
+/*
+@media (max-width: 784px) {
+	body, 
+	header,
+	header nav,
+	.top-section, 
+	.bottom-section, 
+	footer { 
 		flex-flow: column wrap;
 	}
 } */
